Funcionalidad del consumo de agua
Ya estaria la funcionalidad del control consumo de agua, y el button ligado a este en la pantalla home

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -52,4 +52,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.431" />
 
+    <Button
+        android:id="@+id/ConsumoB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#31363F"
+        android:text="Consumo\nde agua"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.572" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
