--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#76ABAE</color>
     <color name="colorBorde">#EEEEEE</color>
+    <color name="Button">#b6e1ff</color>
+
 </resources>
